# felix

./: .dockerignore  .felix_index.json  .felixignore  .gitignore  AGENT_AWARENESS.md  BENCHMARKS.md  CLAUDE.md  CLI_COMPLETE_SUMMARY.md  DATABASE_MIGRATION_SUMMARY.md  Dockerfile  FELIX_ARCHITECTURE.md  FELIX_GAP_ANALYSIS.md  FOLDER_EXTENSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  KNOWLEDGE_CONTROL_ROADMAP.md  LICENSE  MASTERINDEX.md  QUICKSTART.md  README.md  SESSION_MANAGER_API.md  SIMPLE_QUERY_TEST_GUIDE.md  STREAMING_IMPLEMENTATION.md  SYSTEM_AUTONOMY_IMPLEMENTATION.md  SYSTEM_AUTONOMY_PROGRESS.md  USER_MANUAL.md  WEB_SEARCH_INTEGRATION.md  benchmark_results.csv  codebase_structure.txt  docker-compose.yml  felix_knowledge.db  felix_memory.db  felix_task_memory.db  georgie.md  index.md  inspect_knowledge.py  pyproject.toml  pytest.ini  requirements-api.txt  requirements-cli-enhanced.txt  (+22 more)
benchmarks/: README.md  benchmark_airgapped.py  benchmark_communication.py  benchmark_retrieval.py  run_all_benchmarks.py
config/: _index.md  chat_system_prompt.md  llm.yaml  llm.yaml.example  prompts.yaml  trust_rules.yaml
data/: default_tfidf_corpus.txt
docs/: AIR_GAPPED_DEPLOYMENT.md  API_QUICKSTART.md  ARCHITECTURE.md  CHAT_CLI_GUIDE.md  CLI_ARCHITECTURE_FIXES.md  CLI_GUIDE.md  CLI_PHASE1_FEATURES.md  CLI_PHASE2_FEATURES.md  CONFIGURATION.md  COORDINATOR_ARCHITECTURE.md  DEVELOPER_GUIDE.md  FELIX_PRODUCTIZATION_SUMMARY.md  KNOWLEDGE_BRAIN_API.md  KNOWLEDGE_BRAIN_GUI_GUIDE.md  LLM_PROVIDER_GUIDE.md  MEMORY_API.md  MODULAR_AGENTS_SUMMARY.md  PLUGIN_API.md  PRODUCTIZATION_COMPLETE_SUMMARY.md  REST_API_SUMMARY.md  WEBSOCKET_STREAMING_SUMMARY.md  _index.md
examples/: README.md  _index.md  plugin_demo.py
exp/: README.md  benchmark_felix.py  benchmark_results.csv  component_interactions.md  example_workflow.py  felix_memory.db  optimal_parameters.md  workflow_steps.md
prompts/: _index.md
scripts/: _index.md  knowledge_reset.py  migrate_databases.py  migrate_tool_instructions.py
src/: cli.py
streamlit_gui/: INTEGRATION_SUMMARY.md  README.md  TECH_DEBT.md  VERIFICATION_CHECKLIST.md  __init__.py  app.py  run_streamlit_gui.py
tests/: QUICKSTART.md  README.md  STATUS.md  VALIDATION_COMPLETE.md  conftest.py  run_hypothesis_validation.py  test_cascade_delete.py  test_context_awareness_protocol.py  test_destructive_command_blocking.py  test_entry_lifecycle.py  test_fts5_triggers.py  test_tool_memory_basic.py  test_web_search.py  (+1 more)
(+370 files in other folders)
